enviando email e usnado kafka.
