# internal/infrastructure/router/router.go
@@ -2,7 +2,6 @@ package router
 
 import (
 	"fmt"
-	"os"
 	"time"
 
 	"github.com/gin-contrib/cors"
@@ -11,42 +10,50 @@ import (
 	ginSwagger "github.com/swaggo/gin-swagger"
 
 	_ "github.com/viniggjpormade/pormade-email-manager/docs"
-	"gorm.io/gorm"
+	"github.com/viniggjpormade/pormade-email-manager/internal/adapter/delivery/http/handlers"
 )
 
 func Logger() gin.HandlerFunc {
-	return func(c *gin.Context) {
+	return func(context *gin.Context) {
 		t := time.Now()
 
-		fmt.Println("Início da request:", c.Request.Method, c.Request.URL.Path)
+		fmt.Println("Início da request:", context.Request.Method, context.Request.URL.Path)
 
-		c.Next()
+		context.Next()
 		latencia := time.Since(t)
-		status := c.Writer.Status()
+		status := context.Writer.Status()
 		fmt.Println("Fim da request:", status, " | tempo:", latencia)
 	}
 }
 
-func RouterInit(db *gorm.DB) {
-	port := os.Getenv("PORT")
-	if port == "" {
-		port = "8000"
-	}
+func NewRouter(
+	accountHandler *handlers.AccountHandler,
+	emailHandler *handlers.EmailHandler,
+	authMiddleware gin.HandlerFunc,
+) *gin.Engine {
 	router := gin.Default()
 	router.MaxMultipartMemory = 8388608
 	router.Use(Logger())
 	router.Use(cors.New(cors.Config{
-		AllowOrigins:     []string{"http://localhost:5173", "http://localhost:3000"},
-		AllowMethods:     []string{"GET", "POST", "PATCH", "DELETE", "OPTIONS"},
+		AllowOrigins:     []string{"http://localhost:5173", "http://localhost:3000", "http://localhost:8000", "http://127.0.0.1:8000"},
+		AllowMethods:     []string{"GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"},
 		AllowHeaders:     []string{"Content-Type", "Authorization", "Range"},
 		ExposeHeaders:    []string{"Content-Length", "Content-Range"},
 		AllowCredentials: true,
 	}))
 
-	// Registra o swagger
 	router.GET("/docs/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
-	SetupAccountRoutes(router, db)
+	accountApi := router.Group("/accounts")
+	{
+		accountApi.POST("", accountHandler.Create)
+		accountApi.PUT("", authMiddleware, accountHandler.Update)
+	}
 
-	router.Run(fmt.Sprintf("0.0.0.0:%s", port))
+	emailApi := router.Group("/emails")
+	{
+		emailApi.POST("", authMiddleware, emailHandler.SendEmail)
+	}
+
+	return router
 }
